# agent-arena

./: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml  render.yaml
arena/: cli.py  db.py  games.py  ratings.py  research.py  submissions.py
arena/agents/: baselines.py  llm_pd.py  sim_llm.py
arena/game/: dilemma.py  saboteur.py
arena/runner/: match.py  orchestrator.py  sandbox.py
arena/web/: app.py
results/: arena.db  bench_dilemma.json  bench_saboteur.json  faults_saboteur.json  stress_dilemma_comms.json  verify_dilemma.json  verify_saboteur.json
tests/: test_api.py  test_comms.py  test_dilemma.py  test_engine.py  test_stress.py
