[project]
name = "agent-arena"
version = "0.1.0"
description = "Evaluation platform for multi-agent hidden-role games: parallel seeded match execution, fault-isolated agent sandboxing, reproducible tournaments, TrueSkill-style leaderboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "openskill>=6.2.0",
    "uvicorn[standard]>=0.51.0",
]

[project.optional-dependencies]
# LLM agents for the dilemma_comms research variant. Install with
# `uv sync --extra llm`. Kept optional so the core platform and the full
# test suite run with no network dependency.
llm = ["openai>=1.40.0"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arena"]

[tool.pytest.ini_options]
pythonpath = ["."]
